2023-06-22/host_introspection/log.txt
   Compiling c2rust_out v0.0.0 (/home/c00834010/dev/crusts-benchmarks/2023-06-22/host_introspection)
error[E0133]: dereference of raw pointer is unsafe and requires unsafe function or block
  --> src/main.rs:18:8
   |
18 |     if *(&mut one as *mut i32 as *mut i8) != 0 {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ dereference of raw pointer
   |
   = note: raw pointers may be null, dangling or unaligned; they can violate aliasing rules and cause data races: all of these are undefined behavior

For more information about this error, try `rustc --explain E0133`.
error: could not compile `c2rust_out` (bin "main") due to previous error
